# syntax

./: Cargo.toml  LICENSE  README.md  TODO_MVP.md
.eggs/: egg.001.xstream-data-first-cli-paradigm.txt  egg.002.xstream-session-chronicles.txt  egg.003.view-flag-communication-protocol.txt  egg.004.oodx-ecosystem-architecture-implications.txt
docs/: PARSERS.md
docs/rfcs/: AST-RFC.md
examples/: for_loop.rs
src/: easy.rs  error.rs  lib.rs  macros.rs  prelude.rs
src/cmd/: mod.rs
src/exec/: mod.rs
src/lens/: mod.rs
src/render/: mod.rs
src/tmpl/: mod.rs
src/tmpl/parser/: bash.rs  jynx.rs  mod.rs  simple.rs
